Updated to use Nimbus SDK